--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "angular": "^1.x",
     "d3": "^3.3",
-    "nvd3": "^1.7.1"
+    "nvd3": "oisoftware/nvd3"
   },
   "devDependencies": {
     "angular-mocks": "^1.x",
